# homework-python

./: README.md  _config.yml  bubble_sort.s  index.md  pyproject.toml  sort.c  sort.py
.github/workflows/: ruff.yml  test.yml
homework_06.10/: instruction.md
src/: euclid.py
src/homework3-sort/: bubble_sort.py
src/homework4-task_queens/: complexity.md  queens_optimized.py  queens_perebor.py  queens_recursive.py
src/homework5-code_style/: exchange_of_coins.py
src/homework5_17.10_tests-sort/: other_sorts.py  test_heap_sort.py  tests2.py
src/homework6_26.10_curry/: curry.py
src/homework7_16.11_Huffman/: huffman_code.py
src/homework8_28.11_graph/: graph.py
src/kr2/: binomial_heap.py
