[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "your-project"
version = "0.1.0"
requires-python = ">=3.8"

[tool.ruff]
target-version = "py311"
line-length = 100
cache-dir = ".ruff_cache"
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "ARG"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101", "SLF001"]
"**/migrations/**/*.py" = ["ALL"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]
python_files = ["test_*.py"]
